# exploring_usv_positioning

./: README.md
cv2_map/: cv2_centroid_longside.py  cv2_centroid_longside_error_noise_plot.py  cv2_centroids.py  cv2_contour.py  cv2_detection.py  cv2_homography_warp.py  cv2_longside_allign.py  cv2_template.py  generate_training_data_bay_lines.py  generate_training_data_boot.py  generate_trining_data_boot_increasing_noise.py  partly_generate_training_data.py
cv2_map/bay_evaluation_data/: training_data_0.pkl  training_data_1.pkl  training_data_2.pkl  training_data_3.pkl  training_data_4.pkl  training_data_5.pkl  training_data_6.pkl  training_data_7.pkl  training_data_8.pkl  training_data_9.pkl
cv2_map/bay_template_data/: training_data_1.pkl
cv2_map/template_data/: training_data_0.pkl  training_data_1.pkl  training_data_2.pkl  (+7 more)
o3d_map/: bay_lines.dxf  box_plot_noise_error_simple_allign.py  box_plot_simple_allign.py  cloud_generator.py  noise_error_03d_simple_allign.py  o3d_allign.py  o3d_allign_import.py  o3d_centroid_icp.py  o3d_multiscale_icp.py  o3d_npy_centroid_icp.py  o3d_simple_allign.py
pointcloud_cluster_detection/: CMakeLists.txt  package.xml
pointcloud_cluster_detection/launch/: pointcloud_cluster_detection.launch
pointcloud_cluster_detection/objects/: 31x37x39_box.STL  80x80.pcd  80x80box.stl  80x80free.pcd  80x80free2.pcd  d200ball.stl  testthingy.pcd  testthingy60cm.pcd
pointcloud_cluster_detection/scripts/: euclidean_distance_plotter.py  position_plotter.py
pointcloud_cluster_detection/src/: pcl_edge_detection_node.cpp  pointcloud_cluster_detection_node.cpp
pointcloud_cluster_detection/src/old_src/: BOX_pose_that_works_pointcloud_cluster_detection_node.cpp  CSV1pointcloud_cluster_detection_node.cpp  CSV2pointcloud_cluster_detection_node.cpp  NOTCSVpointcloud_cluster_detection_node copy.cpp  PCD_import_trying_detection_nonworking_pointcloud_cluster_detection_node.cpp  PCD_import_working_pointcloud_cluster_detection_node.cpp  STL_import_working_pointcloud_cluster_detection_node.cpp  workin_measured_STL_adjust_cluster_xyz_pointcloud_cluster_detection_node.cpp
pointcloud_filter/: CMakeLists.txt  package.xml
pointcloud_filter/launch/: README.md  pointcloud_filter.launch
pointcloud_filter/rviz/: ouster_rviz.rviz
pointcloud_filter/src/: pointcloud_filter_node.cpp
pointcloud_filter/src/old_src/: pointcloud_filter_node copy.cpp
ransac_map/: big_boot.dxf  boot.dxf  dbscan_dxf_fit.py  dxf_import_plot.py  dxf_noisy_points.py  new_figure.dxf  pdf_merge_sidebyside.py  ransac_corner_fit.py  ransac_dxf_fit.py  ransac_dxf_heuristic_fit.py  ransac_dxf_qp_fit.py  ransac_noise_error_plot.py  ransac_procrustes_dxf_fit.py  ransac_rotated_corner_fit.py  ransac_square_fit.py  ransac_vec_fit.py  ransac_vec_fit_infinite.py  simple_vec_fit.py  vec_fit.py
(+17 files in other folders)
