<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_cluster_detection</name>
  <version>0.0.0</version>
  <description>The point cloud cluster detection package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend> <!-- Added pcl_conversions as a dependency -->
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend> <!-- Added pcl_conversions as an execution dependency -->
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>
